--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ rvm:
  - rbx
 # uncomment this line if your project needs to run something other than `rake`:
 # script: bundle exec rspec spec
+before_install:
+  - sudo apt-get install ubuntu-restricted-extras ffmpeg
