--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ rvm:
  - rbx
 # uncomment this line if your project needs to run something other than `rake`:
 # script: bundle exec rspec spec
+
 before_install:
-  - sudo apt-get install ubuntu-restricted-extras ffmpeg
+  - gem install bundler -v '= 1.5.1'
+  - gem install i18n -v '0.7.0'
